Added link to instagram

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<img src="poppy-web.png" class="poppy-image">
+		<a href="https://www.instagram.com/poppygirlworld/"><img src="poppy-web.png" class="poppy-image"></a>
 		<div class="container">
 	  		<h1>
 	  			<span class="line line1">Poppy Girl World</span>
